--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-  <a class="navbar-brand" href="">
+  <%=link_to(welcome_index_path(), class: "navbar-brand") do %>
     <img src="<%=image_url('hogwarts_logo.png')%>" width="30" height="30" class="d-inline-block align-top" alt="">
-    Registration
-  </a>
+    my.Hogwarts
+  <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
