--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
   <head>
     <title>Hogwarts</title>
     <%= csrf_meta_tags %>
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="<%=image_url('favicon/apple-touch-icon.png')%>">
+    <link rel="icon" type="image/png" sizes="32x32" href="<%=image_url('favicon/favicon-32x32.png')%>">
+    <link rel="icon" type="image/png" sizes="16x16" href="<%=image_url('favicon/favicon-16x16.png')%>">
+    <link rel="manifest" href="<%= asset_url('favicon/site.webmanifest') %>">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
