--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -16,6 +16,12 @@
          <li><%= course.course_name %></li>
         <%end %>
       </ul>
+      <form action="addPastCourseToStudent" method="POST">
+        <%= hidden_field_tag :student_id, @student.id %>
+        <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+        <%= collection_select @course, :course_id, (Course.all-@student.courses), :id, :course_name %>
+        <input type="submit" class="btn btn-main" name="add-previous-course" value="Submit">
+      </form>
     </div>
   </div>
 </div>
