--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -6,8 +6,8 @@
         <div class="form-row">
           <div class="col-md-6">
             <%= form.text_field :name, {:class => 'form-control', :placeholder => 'Name'} %>
-            <%= form.number_field :capacity, {:class => 'form-control'} %>
-            <%= submit_tag %>
+            <%= form.number_field :capacity, {:class => 'form-control', :placeholder => 'Capacity'} %>
+            <input type="submit" class="btn btn-main" value="Submit">
           </div>
           <div class="col-md-6">
 
