Add working registration

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,7 +7,7 @@
           <tr>
             <th scope="col">Code</th>
             <th scope="col">Name</th>
-            <th scope="col" class="sorttable_nosort">Current Offerings</th>
+            <th scope="col" class="sorttable_nosort">Currently Offered</th>
             <th>View</th>
             <th>Edit</th>
             <th>Delete</th>
@@ -18,7 +18,13 @@
           <tr>
             <td><%= course.subject %>-<%= course.section %></td>
             <td><%= course.course_name %></td>
-            <td></td>
+            <td>
+              <% if HogwartsClass.where(course: course).present? %>
+                <%= "Yes" %>
+              <% else %>
+                <%= "No" %>
+              <% end %>
+            </td>
             <td><%= link_to("View", course_path(course)) %></td>
             <td><%= link_to("Edit", edit_course_path(course)) %></td>
             <td><%= link_to("Delete", course_path(course), method:
