--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-3 s"></div>
 </div>
 
-<footer class="text-center">
+<footer class="text-center footer">
 
   <img src="<%=image_url('hogwarts_logo.png')%>" width="50" height="50" class="d-inline-block align-top" alt="">
   <br>
