--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -2,13 +2,17 @@
   <div class="row">
     <div class="col-md-12 text-center">
       <h2>Registration</h2>
-      <form method="post" action="intermediateRegistration">
         <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <h3>Select a student</h3>
-        <%= collection_select @student, :id, (Student.all), :id, :full_name %>
-        <!-- don't show courses they're already registered for -->
-        <input type="submit" class="btn btn-main" value="Submit">
-      </form>
+        <ul>
+        <% @students.each do |student| %>
+          <li>
+            <%=link_to(registration_path(student), class: "nav-link") do %>
+              <%= student.full_name %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </div>
