--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,30 +1,36 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-5">
-      <img src="<%= image_url('%s_logo.png' % [@student.house.downcase])%>" class="profile-logo">
+    <div class="col-md-12 text-center">
+    <h2><%= @student.full_name %></h2>
     </div>
-    <div class="col-md-5">
-      <h2><%= @student.full_name %></h2>
+  </div>
+  <div class="row">
+    <div class="col-md-4 ml-auto">
       <h4>Currently Enrolled:</h4>
       <ul>
         <% @current_classes.each() do |current_class|  %>
          <li><%= current_class.course.course_name %></li>
         <%end %>
       </ul>
-
+    </div>
+    <div class="col-md-4 mr-auto">
       <h4>Past Courses:</h4>
       <ul>
         <% @past_courses.each() do |course|  %>
          <li><%= course.course_name %></li>
         <%end %>
       </ul>
-
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12 text-center">
       <form action="registerStudentForCourse" method="POST">
         <%= hidden_field_tag :student_id, @student.id %>
         <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <h4>Register <%= @student.first_name%> for: </h4>
         <%= select("hogwarts_class", "hogwarts_class_id", @available_classes.collect {|c| [ c.course.course_name, c.id ] }, { include_blank: false })%>
-        </br>
+        <br/>
+        <br/>
         <input type="submit" class="btn btn-main" name="add-previous-course" value="Submit">
       </form>
     </div>
