--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -4,13 +4,18 @@
       <img src="<%= image_url('%s_logo.png' % [@professor.house.downcase])%>" class="profile-logo">
     </div>
     <div class="col-md-5">
-      <h2><%= @professor.first_name %> <%= @professor.last_name %></h2>
-      <h4>Currently Teaching:</h4>
-      <ul>
-        <% @professor.hogwarts_classes.each() do |hogwarts_class|  %>
-         <li><%= hogwarts_class.course.course_name %></li>
-        <% end %>
-      </ul>
+      <h2><%= @professor.full_name %></h2>
+      <% if @professor.hogwarts_classes.count > 0 %>
+        <h4>Currently Teaching:</h4>
+        <ul>
+          <% @professor.hogwarts_classes.each() do |hogwarts_class|  %>
+           <li><%= hogwarts_class.course.course_name %></li>
+          <% end %>
+        </ul>
+      <% else %>
+        <%= @professor.full_name %> is not currently teaching any classes.
+      <% end %>
+
     </div>
   </div>
 </div>
