--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 text-center">
       <h2>Students</h2>
       <table class="table sortable">
         <thead>
@@ -30,9 +30,7 @@
           <% end %>
         </tbody>
       </table>
+      <%= link_to("Add New", new_student_path(), class: 'btn btn-main') %>
     </div>
-  </div>
-  <div class="row">
-    <%= link_to("Add New", new_student_path(), class: 'btn btn-main') %>
   </div>
 </div>
