--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -23,6 +23,7 @@
           <label><img src="<%=image_url('slytherin_logo.png')%>" class='radio-image'></label>
         </div>
       <% end %>
+      <input type="submit" class="btn-main btn" value="Submit">
     </div>
   </div>
 </div>
