--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -28,6 +28,7 @@ nav.navbar{
 
 .container{
   margin-top: 10px;
+  padding-bottom:100px;
 }
 
 table.sortable thead {
@@ -36,11 +37,16 @@ table.sortable thead {
     font-weight: bold;
     cursor: default;
 }
-
+.footer{
+  position:relative;
+  margin-top:100px;
+  height:120px;
+  clear:both;
+  padding-top:20px;
+}
 footer{
   background-color: #000;
   color: #fff;
-  padding: 10px;
 }
 
 .banner{
