--- a/app/views/hogwarts_classes/show.html.erb
+++ b/app/views/hogwarts_classes/show.html.erb
@@ -19,13 +19,22 @@
           </thead>
           <% @enrolled.each do |student| %>
           <tr>
-            <td><%= student.full_name %></td>
+            <td><%=link_to(student_path(student)) do %>
+                <%= student.full_name %>
+              <% end %></td>
             <td><%= student.full_name %></td>
           </tr>
           <% end %>
         </table>
         <% else %>
         There are no students registered for this class yet.
+        <br/>
+        <%=link_to(registrations_path(), class: "btn btn-main") do %>
+          Add one
+        <% end %>
+        <% end %>
+        <%=link_to(hogwarts_classes_path(), class: "btn btn-main") do %>
+          Return to courses
         <% end %>
     </div>
   </div>
