--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -6,14 +6,22 @@
     <div class="col-md-5">
       <h2><%= @professor.full_name %></h2>
       <% if @professor.hogwarts_classes.count > 0 %>
-        <h4>Currently Teaching:</h4>
-        <ul>
-          <% @professor.hogwarts_classes.each() do |hogwarts_class|  %>
-           <li><%= hogwarts_class.course.course_name %></li>
+      <h4>Currently Teaching:</h4>
+      <ul>
+        <% @professor.hogwarts_classes.each() do |hogwarts_class|  %>
+        <li>
+          <%=link_to(hogwarts_class_path(hogwarts_class)) do %>
+            <%= hogwarts_class.course.course_name %>
           <% end %>
-        </ul>
+        </li>
+        <% end %>
+      </ul>
       <% else %>
-        <%= @professor.full_name %> is not currently teaching any classes.
+      <%= @professor.full_name %> is not currently teaching any classes.
+      <% end %>
+
+      <%=link_to(professors_path(), class: "btn btn-main") do %>
+        Return to professors
       <% end %>
 
     </div>
