--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-5 ml-auto">
       <h4>Currently Enrolled:</h4>
       <ul>
         <% @current_classes.each() do |current_class|  %>
@@ -15,7 +15,7 @@
         <%end %>
       </ul>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-5 mr-auto">
       <h4>Past Courses:</h4>
       <ul>
         <% @past_courses.each() do |course|  %>
