Clean up edit forms

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -5,10 +5,16 @@
       <%= form_for(@course) do |form| %>
         <div class="form-row">
           <div class="col-md-6">
-            <label>Subject: </label>
+            <label for="course[subject]">Subject: </label>
             <%= form.select(:subject, @subjects, {:class => 'form-control'}) %>
-            <%= form.text_field :course_name, {:class => 'form-control', :placeholder => 'Course Name'} %>
-            <%= form.text_field :section, {:class => 'form-control', :placeholder => 'Section'} %>
+            <div class="form-group">
+              <label for="course[course_name]">Course Name: </label>
+              <%= form.text_field :course_name, {:class => 'form-control', :placeholder => 'Course Name'} %>
+            </div>
+            <div class="form-group">
+              <label for="course[section]">Section: </label>
+              <%= form.text_field :section, {:class => 'form-control', :placeholder => 'Section'} %>
+            </div>
             <br/>
             <input type="submit" class="btn btn-main" value="Submit">
           </div>
