--- a/app/views/hogwarts_classes/edit.html.erb
+++ b/app/views/hogwarts_classes/edit.html.erb
@@ -3,13 +3,20 @@
     <div class="col-md-12">
       <h2>Modify </h2>
       <%= form_for(@class) do |form| %>
-      <div class="form-row">
-        <%= collection_select @course, :course_id, (Course.all), :id, :course_name, {:selected => @class.course.id} %>
-        <%= collection_select @professor, :professor_id, (Professor.all), :id, :full_name, {:selected => @class.professor.id} %>
-        <%= form.text_field :section, {:class => 'form-control', :placeholder => @class.section} %>
+        <div class="form-group">
+          <label for="course_id">Course: </label>
+          <%= collection_select @course, :course_id, (Course.all), :id, :course_name, {:selected => @class.course.id} %>
+        </div>
+        <div class="form-group">
+          <label for="professor_id">Professor: </label>
+          <%= collection_select @professor, :professor_id, (Professor.all), :id, :full_name, {:selected => @class.professor.id} %>
+        </div>
+        <div class="form-group">
+          <label class="d-inline" for="section">Section: </label>
+          <%= form.text_field :section, {:class => 'form-control d-inline-block', :placeholder => @class.section} %>
+        </div>
         <input type="submit" class="btn btn-main" value="Submit">
       </div>
-    </div>
     <% end %>
   </div>
 </div>
