--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -29,6 +29,7 @@ nav.navbar{
 .container{
   margin-top: 10px;
   padding-bottom:100px;
+  min-height: 335px;
 }
 
 table.sortable thead {
@@ -42,7 +43,7 @@ table.sortable thead {
   margin-top:100px;
   height:120px;
   clear:both;
-  padding-top:20px;
+  padding-top:100px;
 }
 footer{
   background-color: #000;
