--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -22,10 +22,10 @@
             </td>
             <td><%= professor.first_name %></td>
             <td><%= professor.last_name %></td>
-            <td><%= link_to("View", professor_path(professor)) %></td>
-            <td><%= link_to("Edit", edit_professor_path(professor)) %></td>
-            <td><%= link_to("Delete", professor_path(professor), method:
-                :delete, data: {confirm: "Are you sure you want to delete this professor?"} ) %></td>
+            <td><%= link_to professor_path(professor) do %><i class="fas fa-eye"></i><% end %></td>
+            <td><%= link_to edit_professor_path(professor) do %><i class="fas fa-edit"></i><% end %></td>
+            <td><%= link_to professor_path(professor), method: :delete, data:{confirm: "Delete this professor?"} do %><i class="fas fa-trash"></i><% end %></td>
+
           </tr>
           <% end %>
         </tbody>
