--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -22,10 +22,9 @@
             </td>
             <td><%= student.first_name %></td>
             <td><%= student.last_name %></td>
-            <td><%= link_to("View", student_path(student)) %></td>
-            <td><%= link_to("Edit", edit_student_path(student)) %></td>
-            <td><%= link_to("Delete", student_path(student), method:
-                :delete, data: {confirm: "Are you sure you want to delete this student?"} ) %></td>
+            <td><%= link_to student_path(student) do %><i class="fas fa-eye"></i><% end %></td>
+            <td><%= link_to edit_student_path(student) do %><i class="fas fa-edit"></i><% end %></td>
+            <td><%= link_to student_path(student), method: :delete, data:{confirm: "Delete this student?"} do %><i class="fas fa-trash"></i><% end %></td>
           </tr>
           <% end %>
         </tbody>
