Add links b/w registration and student.

--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-    <h2><%= @student.full_name %></h2>
+    <h2><%= link_to student_path(@student) do @student.full_name end %></h2>
     </div>
   </div>
   <div class="row">
